force-app/main/default/objects/Donnees_Vente__c/fields/Type_chauffage__c.field-meta.xml
<CustomField>
    <fullName>Type_chauffage__c</fullName>
    <label>Type chauffage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaz</fullName>
            </value>
            <value>
                <fullName>Elec</fullName>
            </value>
            <value>
                <fullName>Fioul</fullName>
            </value>
            <value>
                <fullName>Réseau de chaleur</fullName>
            </value>
            <value>
                <fullName>Propane GPL</fullName>
            </value>
            <value>
                <fullName>Butane</fullName>
            </value>
            <value>
                <fullName>Bois</fullName>
            </value>
            <value>
                <fullName>Solaire</fullName>
            </value>
            <value>
                <fullName>Autre énergie renouvelable</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>NSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>