force-app/main/default/objects/Donnees_Vente__c/fields/Type_de_Comptage__c.field-meta.xml
<CustomField>
    <fullName>Type_de_Comptage__c</fullName>
    <label>Type de Comptage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>