force-app/main/default/objects/Donnees_Vente__c/fields/Type_de_compteur_Elec__c.field-meta.xml
<CustomField>
    <fullName>Type_de_compteur_Elec__c</fullName>
    <label>Type de compteur Elec</label>
    <length>100</length>
    <type>Text</type>
</CustomField>