force-app/main/default/objects/Donnees_Vente__c/fields/Type_equipement_future_logement__c.field-meta.xml
<CustomField>
    <fullName>Type_equipement_future_logement__c</fullName>
    <label>Type équipement futur logement</label>
    <length>80</length>
    <type>Text</type>
</CustomField>