force-app/main/default/objects/Donnees_Vente__c/fields/Type_habitation__c.field-meta.xml
<CustomField>
    <fullName>Type_habitation__c</fullName>
    <label>Type d&apos;habitation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individuelle</fullName>
            </value>
            <value>
                <fullName>Collective</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>