force-app/main/default/objects/Donnees_Vente__c/fields/Type_logement__c.field-meta.xml
<CustomField>
    <fullName>Type_logement__c</fullName>
    <label>Type logement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>maison</fullName>
            </value>
            <value>
                <fullName>appartement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>