force-app/main/default/objects/Donnees_Vente__c/fields/Type_residence_logement__c.field-meta.xml
<CustomField>
    <fullName>Type_residence_logement__c</fullName>
    <description>010 pour principale
020 pour secondaire</description>
    <label>Type résidence logement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>principale</fullName>
            </value>
            <value>
                <fullName>secondaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>