force-app/main/default/objects/Donnees_Vente__c/fields/Utilisation_gaz_futur_logement__c.field-meta.xml
<CustomField>
    <fullName>Utilisation_gaz_futur_logement__c</fullName>
    <label>Utilisation gaz futur logement</label>
    <length>80</length>
    <type>Text</type>
</CustomField>