force-app/main/default/objects/Donnees_Vente__c/fields/VI_DateEnvoiCPV__c.field-meta.xml
<CustomField>
    <fullName>VI_DateEnvoiCPV__c</fullName>
    <formula>IF( /*CASE PARTNER CO*/
    ISPICKVAL(CaseId__r.Origin,&quot;Partner Community&quot;),
      Parcours__r.VI_Date_envoi_email__c,
      null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A compléter avec les autres canaux</inlineHelpText>
    <label>Date d&apos;envoi CPV</label>
    <type>Date</type>
</CustomField>