force-app/main/default/objects/Donnees_Vente__c/recordTypes/Acquisition_Harmonica.recordType-meta.xml
<RecordType>
    <fullName>Acquisition_Harmonica</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement utilisé pour les enregistrements du parcours acquisition Harmonica</description>
    <label>Acquisition_Harmonica</label>
</RecordType>