force-app/main/default/objects/Donnees_Vente__c/recordTypes/Detection_de_projet.recordType-meta.xml
<RecordType>
    <fullName>Detection_de_projet</fullName>
    <active>true</active>
    <description>Type de record pour le parcours détection de projet</description>
    <label>Détection de projet</label>
</RecordType>