force-app/main/default/objects/Donnees_Vente__c/recordTypes/Pure_player_DonneesDeVenteRT.recordType-meta.xml
<RecordType>
    <fullName>Pure_player_DonneesDeVenteRT</fullName>
    <active>true</active>
    <label>Pure Player</label>
</RecordType>