force-app/main/default/objects/Donnees_Vente__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Civilite_client__c</columns>
    <columns>Email_client__c</columns>
    <columns>Nom_client__c</columns>
    <columns>Prenom_client__c</columns>
    <columns>CaseId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>