force-app/main/default/objects/Donnees_Vente__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CaseId__c</columns>
    <columns>reference_client__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CaseId__c</field>
        <operation>equals</operation>
        <value>04134609</value>
    </filters>
    <label>All</label>
</ListView>